<resources>
    <string name="app_name">FirstProject</string>
    <string name="log_in">LOG IN</string>
    <string name="register">REGISTER</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_create_user">create_user</string>
    <string name="welcome">Welcome</string>
    <string name="description">Description</string>
    <string name="add_img">Add Image</string>
    <string name="name">name</string>
    <string name="insert_img">insert img</string>
    <string name="add">Add</string>
    <string name="plus">+</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tabbed_list">TabbedList</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>


</resources>
